[ADD] auth
